Adjust to java 17